# geiflix

./: .README.md.swp  .gitignore  README.md  analyseIMG.cpp
.metadata/: .log4j.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: FW-Motor-Dir.language.settings.xml  voiture-elec.language.settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 0.snap
.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Machine_learning/: Fire_Dataset.py  Fire_Dset.py  Fire_NN.py  Jetson_Cam.py  Machine_learning.py  Model_Training.py  Routine.py  Test_jetson.py
Web_site/flask_app/flask_app/: client.py  data.txt  map.py  server.py  test_write.py
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/src/boule_de_cristal/: CMakeLists.txt  mainpage.dox  package.xml
catkin_ws/src/boule_de_cristal/include/boule_de_cristal/: image_node.hpp  main_window.hpp  qnode.hpp
catkin_ws/src/boule_de_cristal/src/: image_node.cpp  main.cpp  main_window.cpp  qnode.cpp
catkin_ws/src/boule_de_cristal/ui/: main_window.ui
catkin_ws/src/camera/: CMakeLists.txt  package.xml
catkin_ws/src/lidar_detection/: CMakeLists.txt  package.xml
catkin_ws/src/ros_recognition/: CMakeLists.txt  package.xml
demo/: demo.sh  demo.sh.save
documentation/: topologie.drawio
function_0-Raspberry/config/dnsmasq.d/: 090_eth0.conf  090_raspap.conf  090_wlan0.conf
function_0-Raspberry/config/hostapd/: hostapd.conf
function_0-Raspberry/config/systemd-service/: pican2.service
function_0-Raspberry/config/wpa_supplicant/: wpa_supplicant.conf
function_0-Raspberry/documentation/: .README.md.swp  README.md
function_0-Raspberry/python/: main.py  server.py
function_0-Raspberry/python/klunk/: can.py  car.py  motors.py  ultrasound.py  webInterface.py  xboxController.py
function_0-Raspberry/python/tests/: test_US.py  test_client.py  test_server.py  test_webInterface.py  test_xbox.py
function_0-Raspberry/scripts/: README.md  server.py  server_OK_old.py  server_old.py
function_0-Raspberry/scripts/tests/: US_test.py  US_test_old.py  test.py  test_us.py
function_0-Raspberry/server/: README.md  server.py  test.py
function_0-Raspberry/systemd-service/: pican2.service
function_1-Lidar/documentation/: README.md
function_1-Lidar/exemple réseau/: tsock_BAL_Final.c
function_1-Lidar/src/: DIFOPsniffer.py  MSOPsniffer.py  RSLIDAR16_datanalyser.py  ReadMe.md  UCWPsender.py  UCWPsniffer.py  UDPsniffer.py
function_1-Lidar/src/catkin_ws/: ReadMe.md
function_2-Jetson/: JetsonFollow.cpp
function_2-Jetson/camera/analyseIMG/: CMakeLists.txt  README.md  analyseIMG.cpp
function_2-Jetson/documentation/: README.md
function_2-Jetson/documentation/Camera/: README.md
function_2-Jetson/documentation/camera/: README.md
function_2-Jetson/scripts/: librplidar_sdk.la  librplidar_sdk.pc
function_2-Jetson/scripts/recoImage Cpp/: README.txt
function_3-US/documentation/: README.md
function_3-US/firmware/: .cproject  .project
function_3-US/firmware projet/: .cproject  .gitignore  STM32F303VCTX_FLASH.ld  US.launch
function_3-US/firmware projet/src/: main.c
function_4-GPS-IMU/documentation/: README.md
function_4-GPS-IMU/firmware/: .cproject  .mxproject  .project  IMU-GPS-simple Debug.launch  IMU-GPS-simple.ioc
function_5-Motor-Direction/documentation/: README.md
function_5-Motor-Direction/firmware/: .cproject  .project  FW-Motor-Dir Debug.launch  FW-Motor-Dir.ioc  FW-Motor-Dir.launch  Makefile  TP.md
function_5-Motor-Direction/firmware/Inc/: GPS.h  calibrate.h  can.h  control.h  control_direction.h  stm32f1xx_hal_conf.h  usart.h
function_5-Motor-Direction/firmware/Src/: GPS.c  calibrate.c  can.c  control.c  control_direction.c  dma.c  main.c  steering.c  stm32f1xx_it.c  tim.c  usart.c  wheels.c
function_8-Camera/documentation/: README.md
function_8-Camera/src/: reco.py
interface/: CMakeLists.txt
interface/src/graphics/: CMakeLists.txt
interface/src/graphics/include/: MainWindow.h
interface/src/graphics/src/: MainWindow.cpp
interface/src/middleware/: CMakeLists.txt
interface/src/middleware/include/: middleware.h
interface/src/middleware/src/: main.cpp  middleware.cpp
interface/tools/: install_tools.sh
voiture-elec/: .cproject  .mxproject  .project  voiture-elec.ioc
(+94 files in other folders)
